# Data

L4R/LRR/: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  COMPONENTS  Jenkinsfile  cantata_env.bat  cmake_build.bat  cmake_gen.bat  tcc_toolversion_itc2.txt  tools_wrapper.py
L4R/LRR/jenkins/configs/: AD_Radar_PF.yaml  AD_Radar_PF_develop.yaml  pf_rbs_develop.yaml
L4R/LRR/jenkins/configs/CommitID_Builder/: CommitID_builder_customized.yaml
L4R/LRR/jenkins/configs/includes/: 01_rng_export.yaml  02_rng_convert.yaml  03_rng_compile.yaml  03a_rng_export_convert_compile.yaml  04_rng_create.yaml  05_rng_sign.yaml  06_rng_publish.yaml  07_rng_developer_build.yaml  A2LUpdate.yaml  BranchClean.yaml  BuildBCT.yaml  BuildInfo.yaml  BuildSW.yaml  CT_Trigger.yaml  Calcres.yaml  CantataHost.yaml  ChangedFiles.yaml  CheckFluxDetails.yaml  CheckFluxErrors.yaml  CheckFluxErrorsNight.yaml  CheckoutRBS.yaml  CheckoutSCM.yaml  CheckoutSCM_commit.yaml  CommitID_builder_customized.yaml  CoveragePerComp.yaml  Coverity.yaml  CreateTag.yaml  CustomerFolderGen.yaml  Doxygen.yaml  FOSS.yaml  FR5CUSpecGen.yaml  FetchTags.yaml  GenerateHeader.yaml  GenerateHeader_archive.yaml  GeneratePDM.yaml  LinesofCode.yaml  MTUpdate.yaml  MergedHex.yaml  PlantContainer_FR5CU.yaml  PlantContainer_Nightly.yaml  (+28 more)
L4R/LRR/jenkins/configs/nightly/: CodeAnalysis.yaml  IntTest_nightly.yaml  StaticCodeAnalysis.yaml  full_build.yaml
L4R/LRR/jenkins/configs/release/: 01_rng_export.yaml  02_rng_convert.yaml  03_rng_compile.yaml  03a_rng_export_convert_compile.yaml  04_rng_create.yaml  05_rng_sign.yaml  06_rng_publish.yaml  07_rng_developer_build.yaml  Customer_folder_gen.yaml  Release_build.yaml  Release_folder.yaml  Release_test.yaml  Release_upload_rqm.yaml
L4R/LRR/jenkins/configs/weekly/: WeeklyJobs.yaml
L4R/LRR/jenkins/jenkinsfiles/: Jenkinsfile_commitid_builder.jenkins  Jenkinsfile_cust_fldr_gen.jenkins  Jenkinsfile_nightly_CodeAnalysis  Jenkinsfile_nightly_IntTest  Jenkinsfile_nightly_StaticCodeAnalysis  Jenkinsfile_nightly_full_build  Jenkinsfile_rbs_build.jenkins  Jenkinsfile_release_build.jenkins  Jenkinsfile_release_folder.jenkins  Jenkinsfile_release_rqm.jenkins  Jenkinsfile_release_test.jenkins  Jenkinsfile_rng_create  Jenkinsfile_rng_developer_build  Jenkinsfile_rng_export_convert_compile  Jenkinsfile_rng_publish  Jenkinsfile_rng_sign  Jenkinsfile_weekly  aras_multibranch_pipeline.jenkins
L4R/LRR/jenkins/scripts/: ATF_clean_ws.py  BuildStatusRBS.py  CalcresCheck.py  CheckoutRBS.py  CreateTag.py  FetchTags.py  Stash.py  Unstash.py
L4R/LRR/jenkins/scripts/prepare_foss/: create_zip.py  foss_DiaTester.cfg  foss_ROS4LGP.cfg  foss_apl.cfg  prepare_foss.py  prepare_foss_ROS.py  readme.md
L4R/LRR/jenkins/scripts/rng/: buildInfoCfg.bat  buildInfoCfg.py  developerBuild.py
L4R/LRR/tools/AutoMatedCantataTests/: AutomaticCantataHostExec.py  AutomaticCantataTargetExec.py  Coverage_per_Comp.bat  Coverage_per_Comp.py  ExecuteCantataTests.bat  ExecuteCantataTestsTarget.bat  set_env.bat  set_env_target.bat  testscript.py
L4R/LRR/tools/AutoMatedCantataTests/cfg/: config_uC1.t32  config_uC2.t32
L4R/LRR/tools/AutoMatedTests/: ExecuteAutomatedTestsWithHwSelection.bat
L4R/LRR/tools/AutoMatedTests/doc/: automatedTestFramework_changelog.md
L4R/LRR/tools/AutoMatedTests/testcases/: RQM.csv  Sw_int_test_Port_initialization.py  Sw_int_test_Runnables_initialization.py
L4R/LRR/tools/branch_cleaner/: README.md  bitbucket_delete_old_branches.py  branch_cleaner.bat  requirements.txt
L4R/LRR/tools/branch_cleaner/modules/: bitbucket.py  functions.py
L4R/LRR/tools/cantata/uC_support/: tc39x_ghs.ld
L4R/LRR/tools/cmake/cfg/: Radar_C0.cmake  Radar_FR5CU_DENN1_CEN_N_XX_2_uC2.cmake  Radar_FR5CU_DENN1_CEN_N_XX_2_uC2_post_actions.cmake  Radar_FR5CU_DENN1_CEN_N_XX_2_uC2_series.cmake  Radar_FR5CU_DNNN1_NNN_N_XX_2_uC1.cmake  Radar_FR5CU_DNNN1_NNN_N_XX_2_uC1_series.cmake  XL_Slave_LayoutLinker.cmake  scom_config_uC2.cmake  uC2_Premium_LayoutLinker.cmake
L4R/LRR/tools/cmake/scripts/: directory_creator.py  testEnv_directory_config.yaml
L4R/LRR/tools/doxygen/: 01_parse.bat  AutoGenDoxyDoc.pl  DoxyfileVar  Doxyfile_Template  ReadMe.txt
L4R/LRR/tools/doxygen/doc/: doxygen.tex
L4R/LRR/tools/lucxbox/: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODEOWNERS  Dockerfile  Jenkinsfile  MANIFEST.in  README.md  lucxbox_steps.py  requirements.txt  setup.py  setup_pre_commit.py
L4R/LRR/tools/lucxbox/docs/: GettingStartedWithLUCxBox.md
L4R/LRR/tools/lucxbox/lucxbox/: __pkginfo__.py
L4R/LRR/tools/resViz/: resviz.py
L4R/LRR/tools/resViz/Demangler/: GHS_Decoder.py  GHS_Demangler.py  __init__.py
L4R/LRR/tools/resViz/LDReader/: GHS_LDReader.py  __init__.py
L4R/LRR/tools/resViz/MapReader/: GHS_FileReader.py  GHS_MapReader.py  LiSection.py  LoSection.py  Symbol.py  Util.py  XmlMapReader.py  __init__.py  map_example.xml
L4R/LRR/tools/resViz/MapWriter/: XmlMapWriter.py  __init__.py  testsymbol.py
L4R/LRR/tools/resViz/MemConfig/: BaseMemconfig.py  CustomMemconfig.py  TriCoreMemConfig.py  __init__.py  __tc_default_mcfg.json  tc_default_mcfg.json  testMemConfig.json
L4R/LRR/tools/rng/: 01_rng_export.bat  02_rng_convert.bat  03_rng_compile.bat  03a_rng_export_convert_compile.bat  04_rng_create.bat  05_rng_sign.bat  06_rng_publish.bat  README.md  TODO.md  build_info.json  release_info.json
L4R/LRR/tools/sca_tools/: sca_tools_readme.md
L4R/uLRR/: CMakeLists.txt
L4R/uLRR/.devcontainer/: README.md
L4R/uLRR/.devcontainer/a-core-application/: Dockerfile  devcontainer.json
L4R/uLRR/.devcontainer/docs-as-code/: Dockerfile  devcontainer.json
L4R/uLRR/devops/: README.md
L4R/uLRR/devops/pipelines/: README.md
L4R/uLRR/devops/scripts/: README.md  ubuntu2004-generic-id.sh
L4R/uLRR/tools/azure_image_builder/: custom.ps1  staging_win_vm.json
L4R/uLRR/tools/build_tool/: README.md  ir2-build-tool  setup.bash  tool_settings_aos  tool_settings_bl
L4R/uLRR/tools/buildchain/: CMakeLists.txt  readme.md
L4R/uLRR/tools/googletest/: HowTo_GTest_uLRR.md  README.md  conanfile.py
(+1026 files in other folders)
