# =============================================================================
#  C O P Y R I G H T
# -----------------------------------------------------------------------------
#  Copyright (c) 2022 by Robert Bosch GmbH. All rights reserved.
#
#  This file is property of Robert Bosch GmbH. Any unauthorized copy, use or
#  distribution is an offensive act against international law and may be
#  prosecuted under federal law. Its content is company confidential.
# =============================================================================
#  Filename: 	setup.cfg
# ----------------------------------------------------------------------------
[metadata]
name = swq-sca-tools
maintainer = Pro XC DOIT Software Quality Team
maintainer_email = CC-ADPJ-DoitSoftwareQualityTeam@bcn.bosch.com
home_page = https://sourcecode.socialcoding.bosch.com/projects/CDF/repos/sca_tools
version = attr: swq.version.VERSION
description = This project comprehends a set of scripts aimed to help out projects to create and maintain their own SCA Tools project structures in a flexible and customizable way.
long_description = file: README.md, CHANGELOG.md
keywords = swq, sca, tools, static, code, analysis, software, quality
license_files = LICENSE.txt
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Environment :: Console
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Static Code Analysis
    Topic :: Software Development :: Linting

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
  openpyxl>=3,<4
  pandas>=1,<2
  plumbum>=1,<2
  psutil>=5,<6
  requests>=2,<3
  suds-py3==1.4.4.1
  Jinja2>=3

[options.packages.find]
exclude =
    test
    behave_tests

[options.entry_points]
console_scripts =
    swq-sca-tools = swq.__main__:run
    sca_tools = swq.__main__:run

[pycodestyle]
ignore=E125,W504,E121,E126,E127
exclude=.nox,.git